# transcribee-voctoweb-glue

./: .gitignore  README.md  pyproject.toml  shell.nix  transcribee-openapi.json
doc/: workflow.excalidraw
templates/: base.html  event.html  home.html
transcribee_voctoweb/: config.py  main.py  persistent_data.py  subtitle_formtting.py
transcribee_voctoweb/transcribee_api/: client.py  model.py
transcribee_voctoweb/voc_api/: client.py  model.py
